# video_analytics_rlt

./: .env.example  README.md  add_json_data.py  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 7bdeb4d62028_add_tables_videos_and_snapshots.py  9e5436a8699f_fix_relationships.py
src/: exceptions.py
src/bot/: bot.py
src/database/: dal.py  models.py  session.py
src/services/: add_json_data.py
src/services/llm/: llm_client.py  llm_config.py  llm_service.py
