[project]
name = "video-analytics-rlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "envparse>=0.2.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
]
